[gd_scene load_steps=9 format=2]

[ext_resource path="res://PhysicsChain/PhysicsChain.gd" type="Script" id=1]
[ext_resource path="res://assets/chain_link.png" type="Texture" id=2]
[ext_resource path="res://PhysicsChain/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://PhysicsChain/Idle.gd" type="Script" id=4]
[ext_resource path="res://assets/TargetMarker.png" type="Texture" id=5]
[ext_resource path="res://PhysicsChain/Grapple.gd" type="Script" id=6]
[ext_resource path="res://assets/chain_anchor.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 6.70449

[node name="PhysicsChain" type="Node2D"]
script = ExtResource( 1 )
pull_strength = 60

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TargetRay" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="TargetMarker" type="Sprite" parent="StateMachine/Idle"]
visible = false
texture = ExtResource( 5 )

[node name="Grapple" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
anchor_texture = ExtResource( 7 )

[node name="Rope" type="Line2D" parent="StateMachine/Grapple"]
width = 4.0
texture_mode = 0

[node name="GravityField" type="Area2D" parent="."]
space_override = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityField"]
shape = SubResource( 1 )
[connection signal="Angle" from="StateMachine/Grapple" to="." method="_on_Grapple_Angle"]
